--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body{
     font-family: Roboto, sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .header{
@@ -14,6 +19,7 @@ body{
 .header_text{
     font-weight: bold;
     padding-left: 200px;
+    font-size: 24px;
 }
 .links{
     display: flex;
@@ -149,4 +155,64 @@ a {
   font-weight: bold;
   text-align: right;
   padding: 0px 200px 50px;
+}
+
+.sign-up-section{
+
+  padding: 60px 300px;
+
+}
+.container{
+  background-color: #3882F6;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 8px;
+  gap: 16px;
+
+}
+
+.container-left{
+  padding: 50px 0px 50px 100px;
+}
+
+.container-right{
+  padding: 50px 150px 40px 0px ;
+}
+
+.container-text-one{
+  font-size: 24px;
+  color: #E5E7EB;
+  font-weight: bolder;
+}
+
+.container-text-two{
+  font-size: 18px;
+  color: #E5E7EB;
+  
+}
+
+.container-text-{
+  font-size: 18px;
+  color: #E5E7EB;
+  
+}
+
+.sign-up-button{
+    background-color: #3882F6;
+    border-style: solid;
+    border-color:white;
+    color: white;
+    padding: 8px 20px;
+    border-radius: 8px;
+    
+}
+
+.footer{
+  background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+  padding-top:25px;
+  padding-bottom: 25px;
+  color: #E5E7EB;
+  font-size: 12px;
 }
